# Leadflow-Ai-Backend

./: .gitignore  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py  pyproject.toml  seed_tenant.py
api/alembic/: env.py
api/alembic/versions/: a63378b73411_initial_schema.py
api/core/: __init__.py  config.py  database.py
api/models/: __init__.py  base.py  interaction.py  lead.py  tenant.py
api/routers/: lead_router.py
api/schemas/: lead_schema.py
api/services/: lead_service.py  scoring_service.py
dashboard/: Dockerfile  pyproject.toml
frontend/: Dockerfile  index.html  tailwind.config.ts
frontend/public/: dashboard.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx  AppSidebar.tsx  ScoreBadge.tsx  Skeletons.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CalendarPage.tsx  Dashboard.tsx  LeadDetail.tsx  LeadsPipeline.tsx  SettingsPage.tsx
