[tool.poetry]
name = "leadflow-api"
version = "0.1.0"
description = "Core API for LeadFlow Real Estate Scoring"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
alembic = "^1.18.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"