[tool.poetry]
name = "leadflow-dashboard"
version = "0.1.0"
description = "Streamlit Command Center for LeadFlow"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.0"
requests = "^2.31.0"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"